--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,19 @@ html, body, #root {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    user-select: none;
+    overflow-x: hidden;
+}
+h1, h2, h3, h4, h5, h6, p, span, div {
+    font-size: 16px;
 }
 
 #particles-js {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #6a0dad; /* Your purple background color */
+    background-color: #6a0dad;
     background-size: cover;
     background-position: 50% 50%;
     z-index: -1;
@@ -47,28 +53,42 @@ html, body, #root {
     animation: moveRightLeft 2s infinite;
 }
 
-.app{
-    display: grid;
-    grid-template-areas:
-            "main"
-            "footer";
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 10rem;
+header, main, footer {
+    flex: 0 0 auto;
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
-    place-content: center;
 }
 
-main{
-    grid-area: main;
+header, footer {
+    flex: 0 0 auto;
 }
 
-footer{
-    grid-area: footer;
+main {
+    flex: 1 0 auto;
+    overflow-y: auto;
 }
-/* src/App.css */
-body {
-    font-family: 'Inter', sans-serif;
-}
+/*.app{*/
+/*    display: grid;*/
+/*    grid-template-areas:*/
+/*            "main"*/
+/*            "footer";*/
+/*    grid-template-columns: 1fr;*/
+/*    grid-template-rows: 1fr 10rem;*/
+/*    height: 100vh;*/
+/*    place-content: center;*/
+/*}*/
+
+/*main{*/
+/*    grid-area: main;*/
+/*}*/
+
+/*footer{*/
+/*    grid-area: footer;*/
+/*}*/
 
 .glass{
     background-color: rgb(255, 255, 255, 0.1);
@@ -79,4 +99,62 @@ body {
     background-color: rgb(113, 143, 148,0.1);
     backdrop-filter: blur(3px);
     opacity: 10;
+}
+
+.loading-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.loading-gear {
+    width: 150px;
+    height:150px ;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #6a0dad; /* Your purple background color */
+    background-size: cover;
+    background-position: 50% 50%;
+    z-index: -1;
+}
+@media (max-width: 768px) {
+    .app {
+        padding: 0 5%;
+    }
+    main {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+@media (max-width: 480px) {
+    .app {
+        padding: 0 2%;
+    }
+    main {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+footer {
+    /*background-color: rgba(113, 143, 148, 0.1);*/
+    /*backdrop-filter: blur(3px);*/
+    /*padding: 1rem;*/
+    text-align: center;
 }
